--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">engage2022_face_recog</string>
+    <string name="app_name">FaceNet Detection</string>
 </resources>
